<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appThemeColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_menu"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="139dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/profile_text"
            android:fontFamily="@font/luckiest_guy"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_arnold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/permanent_marker"
                android:text="@string/arnold_schwarzenegger_text"
                android:textColor="@color/textTitleColor"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_106_day"
                android:textColor="@color/subTextColor"
                android:textSize="12sp" />

            <TextView
                android:layout_width="276dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/dancing_script"
                android:text="@string/motivation_text"
                android:textAlignment="center"
                android:textColor="#6A6A74"
                android:textSize="20sp"
                android:textStyle="italic" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:layout_weight="0.5"
                            app:srcCompat="@drawable/chest" />

                        <LinearLayout
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="16dp"
                            android:layout_weight="2"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/chest_text"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/subTextColor"
                                android:text="@string/bench_press_text" />
                        </LinearLayout>

                        <com.google.android.material.chip.Chip
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_weight="2"
                            android:text="@string/_40"
                            android:textColor="@color/box1TextColor"
                            app:chipBackgroundColor="@color/box1Color" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:layout_weight="0.5"
                            app:srcCompat="@drawable/triceps" />

                        <LinearLayout
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="16dp"
                            android:layout_weight="2"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/triceps_text"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/subTextColor"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/pushdown_text" />
                        </LinearLayout>

                        <com.google.android.material.chip.Chip
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_weight="2"
                            android:text="@string/_20"
                            android:textColor="@color/box2TextColor"
                            app:chipBackgroundColor="@color/box2Color" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="50dp"
                            android:layout_gravity="center_vertical"
                            android:layout_height="50dp"
                            android:layout_marginStart="16dp"
                            android:layout_weight="0.5"
                            app:srcCompat="@drawable/back" />

                        <LinearLayout
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="16dp"
                            android:layout_weight="2"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/back_text"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/subTextColor"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/lat_pull_down_text" />
                        </LinearLayout>

                        <com.google.android.material.chip.Chip
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_weight="2"
                            android:text="@string/_15"
                            android:textColor="@color/box3TextColor"
                            app:chipBackgroundColor="@color/box3Color" />

                    </LinearLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>